# Huffman

./: .gitignore  4.in  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  huffman  huffman.cbp  huffman.cpp  huffman.hpp  main.cpp
Huffman/: 1.in  1.out  7.in  Huffman.cbp  Huffman.depend  Huffman.layout  huffman.cpp  main.cpp
Testing/Temporary/: CTestCostData.txt
smoke_test/: huffman.cpp  huffman.hpp
tests/: 0.out  1.in  1.out  3.out  4.out  5.out  6.out  7.out  genTest.cpp
